[project]
name = "tank-game"
version = "0.0.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "axjupyter",
    "infrastructure",
    "jobs",
    "api/migrations",
    "pdf-parser"
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "B",
    "I",
    "N",
    "UP",
    "C4",
    "SIM",
    "ASYNC"
]
ignore = [
    "E501"
]

[tool.ruff.lint.isort]
order-by-type = true
known-first-party = ["ax_core"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
